kubernetes/overlays/infrastructure/infra/applications/tempo/tempo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: tempo.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempo
                port:
                  number: 3200
